contrast error fix

--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ h1, h2 {
     color: #747474;
 }
 
+.articleDetails {
+    color: #575757;
+}
+
 .briefingText {
     color: #747474;
 }
